Version 0.4.0:
2023-05-18 [ Maxime “pep” Buquet <pep@bouah.net>, Emmanuel Gil Peyrot <linkmauve@linkmauve.fr> ]
    * Breaking changes:
      - Event::ChatMessage and Event::RoomMessage now include an optional
        message id.
    * Improvements:
      - New Event::ServiceMessage.
      - New Event::HttpUploadedFile.
      - Add a disconnect method on Agent
      - ContactAdded event now fires properly. Thanks Doggo.
      - Update dependencies versions
    * Changes:
      - Split wait_for_events method, make it easier to edit.
      - hello_bot: add catch-all for Event
      - Remove -rs suffix in folder name

xmpp-rs (0.3.0)
    [ Emmanuel Gil Peyrot <linkmauve@linkmauve.fr> ]
    * Breaking changes:
        - Complete change of API. We are not using plugins anymore. Please
          have a look at ClientFeature(s) and Event(s).
    * Improvements:
        - Uses xmpp-parsers 0.15.0, and tokio-xmpp 1.0.1.

    -- Maxime “pep” Buquet <pep@bouah.net> Fri, 13 Sep 2019 01:28:00 +0200